# waraqa

./: README.md  next.config.mjs  package-lock.json  package.json
src/: Toast.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns  icon_1024x1024.icns  icon_128x128.icns  icon_16x16.icns  icon_256x256.icns  icon_32x32.icns  icon_512x512.icns  icon_64x64.icns
src-tauri/src/: main.rs
src/app/: AppErrorBoundary.tsx  AppHeader.tsx  AssistantMessage.tsx  ColorModeSwitcher.tsx  DataTable.tsx  ExecutionOutput.tsx  FileSystemList.tsx  MessageInput.tsx  MessageList.tsx  PyodideContext.tsx  TablePreviewErrorBoundary.tsx  UserMessage.tsx  cm-dark.css  cm-light.css  icons.tsx  jupyterTheme.ts  layout.tsx  page.tsx  store.ts  useModelSettingsStore.tsx
